--- a/src/sample/GUI.fxml
+++ b/src/sample/GUI.fxml
@@ -12,7 +12,7 @@
             <items>
               <MenuItem fx:id="generateGrid" mnemonicParsing="false" onAction="#generateGrid" text="Generate Grid" />
                 <MenuItem fx:id="generateMaze" mnemonicParsing="false" onAction="#generateMaze1" text="Generate Maze (Quadrant Division)" />
-                  <MenuItem mnemonicParsing="false" onAction="#generateMaze2" text="Generate Maze (Recursive Division)" />
+                  <MenuItem mnemonicParsing="false" onAction="#generateMaze2" text="Generate Maze (Prim's Algorithim)" />
                   <MenuItem fx:id="GenerateStartAndEnd" mnemonicParsing="false" onAction="#generateStartAndEnd" text="Generate Start and End Node" />
             </items>
           </Menu>
